# aegis-monitor

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  conftest.py  pyproject.toml  requirements-all.txt  requirements-dev.txt  requirements.txt  validate_project.py
.github/workflows/: deploy-docs.yml  python-publish.yml  release.yml  tests.yml
aegis/: __init__.py
aegis/adapters/: __init__.py  anthropic_adapter.py  base.py  mock_adapter.py  openai_adapter.py  registry.py
aegis/cli/: __init__.py  baseline_cmd.py  compare_cmd.py  cost_cmd.py  eval_cmd.py  main.py
aegis/core/: __init__.py  dataset.py  evaluator.py  regression.py  results.py
aegis/cost/: __init__.py  aggregator.py  calculator.py  limiter.py  pricing.json  pricing_registry.py
aegis/scoring/: __init__.py  base.py  composite.py  exact_match.py  semantic_similarity.py
aegis/storage/: __init__.py  base.py  memory_backend.py  sqlite_backend.py
aegis/utils/: config.py  constants.py  logging.py
docs/: ADAPTER_DEVELOPMENT.html  ADAPTER_DEVELOPMENT.md  ARCHITECTURE.html  ARCHITECTURE.md  CODE_OF_CONDUCT.html  CODE_OF_CONDUCT.md  CONTRIBUTING.html  CONTRIBUTING.md  FULL_DOCUMENTATION.html  FULL_DOCUMENTATION.md  README.html  README.md  USAGE.html  USAGE.md  index.html  viewer.html
examples/: cost_tracking_demo.py  custom_adapter.py  model_compare.py  qa_evaluation.py  sentiment_classification.py  simple_eval.py
examples/datasets/: qa_sample.yaml  summarization.yaml
tests/: __init__.py  test_adapters.py  test_cost_engine.py  test_cost_intelligence.py  test_dataset.py  test_phase3.py  test_phase5.py  test_phase6_coverage.py  test_results.py  test_scoring.py  test_sqlite_storage.py  test_storage.py
tests/integration/: __init__.py  test_eval_flow.py  test_phase3_flow.py  test_phase6_cli.py
